text: Also consider HHEA metrics for default line height

If USE_TYPO_METRICS is not set, also get the HHEA
ascender/descender/lineGap metrics, then compare it with the OS/2 sTypo
metrics and choose the larger line height. This fixes certain fonts
having a default line height that is too tight (e.g. Microsoft JhengHei,
Source Han Sans).

BUG:472502